Changes to make the widget work correctly on IE8.

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -1919,7 +1919,7 @@ a.mirosubs-openid span{
    color: white;
    background-color: black;
    width: 830px;
-   height: 730px;
+   height: 800px;
 }
 
 
